force-app/main/default/objects/HierarquiaDaComissao__c/HierarquiaDaComissao__c.object-meta.xml
<CustomObject>
    <label>Hierarquia da Comissão</label>
    <nameField>
        <label>Hierarquia da Comissão</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hierarquia da Comissão</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>