force-app/main/default/objects/HierarquiaDaComissao__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corretor</fullName>
            </value>
            <value>
                <fullName>CoordenadorDeVendas</fullName>
                <label>Coordenador de Vendas</label>
            </value>
            <value>
                <fullName>GerenteDeVendas</fullName>
                <label>Gerente de Vendas</label>
            </value>
            <value>
                <fullName>DiretorDeVendas</fullName>
                <label>Diretor de Vendas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>