force-app/main/default/objects/HierarquiaDaComissao__c/fields/Comission__c.field-meta.xml
<CustomField>
    <fullName>Comission__c</fullName>
    <label>Comissão (%)</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>