force-app/main/default/objects/HierarquiaDaComissao__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Cargo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrador</fullName>
            </value>
            <value>
                <fullName>Administrativo Comercial</fullName>
            </value>
            <value>
                <fullName>Assessor(a) Comercial - Interno</fullName>
            </value>
            <value>
                <fullName>Assessor(a) Comercial - Parceiros</fullName>
            </value>
            <value>
                <fullName>Assessor(a) Comercial - SP/Miami</fullName>
            </value>
            <value>
                <fullName>Assistência Técnica</fullName>
            </value>
            <value>
                <fullName>Assistente Comercial - Interno</fullName>
            </value>
            <value>
                <fullName>Assistente Comercial - Parceiros</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Controladoria</fullName>
            </value>
            <value>
                <fullName>Corretores</fullName>
            </value>
            <value>
                <fullName>Corretores - SP/Miami</fullName>
            </value>
            <value>
                <fullName>csouz Conta pessoal de Parceiro</fullName>
            </value>
            <value>
                <fullName>Diretor(a) Engenharia</fullName>
            </value>
            <value>
                <fullName>Diretor Comercial</fullName>
            </value>
            <value>
                <fullName>Diretoria(a) Adm</fullName>
            </value>
            <value>
                <fullName>Diretor Presidente</fullName>
            </value>
            <value>
                <fullName>Equipe Claudio Executivo de Parceiro</fullName>
            </value>
            <value>
                <fullName>Equipe Claudio Gerente de Parceiro</fullName>
            </value>
            <value>
                <fullName>Equipe Claudio Usuário de Parceiro</fullName>
            </value>
            <value>
                <fullName>Felicità Executivo de Parceiro</fullName>
            </value>
            <value>
                <fullName>Felicità Gerente de Parceiro</fullName>
            </value>
            <value>
                <fullName>Felicità Usuário de Parceiro</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Gerente Comercial Geral</fullName>
            </value>
            <value>
                <fullName>Gerente Comercial - Interno</fullName>
            </value>
            <value>
                <fullName>Gerente Comercial Regional - Parceiros</fullName>
            </value>
            <value>
                <fullName>Gerente Comercial SP/Miami</fullName>
            </value>
            <value>
                <fullName>Gerente de Marketing</fullName>
            </value>
            <value>
                <fullName>Gerente de Operações Engenharia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>