force-app/main/default/objects/HierarquiaDaComissao__c/fields/TabelaDeComissao__c.field-meta.xml
<CustomField>
    <fullName>TabelaDeComissao__c</fullName>
    <label>Tabela de Comissão</label>
    <referenceTo>TabelaDeComissao__c</referenceTo>
    <relationshipLabel>Hierarquia da Comissão</relationshipLabel>
    <relationshipName>HierarquiaDaComissao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>