force-app/main/default/objects/HierarquiaDaComissao__c/fields/Total_de_Comiss_o__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Comiss_o__c</fullName>
    <label>Total de Comissão</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>