force-app/main/default/objects/HierarquiaDaComissao__c/validationRules/ImpedePercentualPasseTabelaComissao.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedePercentualPasseTabelaComissao</fullName>
    <active>false</active>
    <description>Impede que o percentual passe do definido na Tabela de Comissão.</description>
    <errorConditionFormula>AND(
    OR(
        AND(
            CONTAINS(TEXT(Role__c), &quot;Imobiliária&quot;),
            Comission__c &gt; ( 
                BLANKVALUE(TabelaDeComissao__r.RealStateComissionPercentage__c, 0) + 
                BLANKVALUE(TabelaDeComissao__r.PrizePercentage__c, 0)
            )
        ),
        AND(
            NOT(CONTAINS(TEXT(Role__c), &quot;Imobiliária&quot;)),
            Comission__c &gt; (
                BLANKVALUE(TabelaDeComissao__r.RealStateDeveloperComissionPercentage__c, 0) + 
                BLANKVALUE(TabelaDeComissao__r.PrizePercentage__c, 0)
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>Percentual de comissão não pode exceder o definido na tabela de comissão</errorMessage>
</ValidationRule>